fixed dark mode for sidebar

--- a/client/src/app/layouts/default/default.component.scss
+++ b/client/src/app/layouts/default/default.component.scss
@@ -4,14 +4,30 @@
     height: 100%;
 }
 
-mat-drawer {
-    width: 350px;
-}
-
 mat-drawer-container {
     height: 100%;
 }
 
 mat-drawer-content{
     padding: 20px;
+}
+
+.light-mode {
+    background-color: white;
+    color: black
+}
+
+.dark-mode {
+    background-color: rgb(58, 58, 58);
+    color: white;
+}
+
+mat-drawer {
+    width: 350px;
+
+}
+
+mat-drawer-container .dark-mode {
+    background-color: black;
+    color: white;
 }
